; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_checkpoint.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_checkpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d_info = type { i32, i32, i32, i32 }
%struct.d_info_checkpoint = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.d_info*, %struct.d_info_checkpoint*)* @d_checkpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d_checkpoint(%struct.d_info* %0, %struct.d_info_checkpoint* %1) #0 {
  %3 = alloca %struct.d_info*, align 8
  %4 = alloca %struct.d_info_checkpoint*, align 8
  store %struct.d_info* %0, %struct.d_info** %3, align 8
  store %struct.d_info_checkpoint* %1, %struct.d_info_checkpoint** %4, align 8
  %5 = load %struct.d_info*, %struct.d_info** %3, align 8
  %6 = getelementptr inbounds %struct.d_info, %struct.d_info* %5, i32 0, i32 3
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.d_info_checkpoint*, %struct.d_info_checkpoint** %4, align 8
  %9 = getelementptr inbounds %struct.d_info_checkpoint, %struct.d_info_checkpoint* %8, i32 0, i32 3
  store i32 %7, i32* %9, align 4
  %10 = load %struct.d_info*, %struct.d_info** %3, align 8
  %11 = getelementptr inbounds %struct.d_info, %struct.d_info* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.d_info_checkpoint*, %struct.d_info_checkpoint** %4, align 8
  %14 = getelementptr inbounds %struct.d_info_checkpoint, %struct.d_info_checkpoint* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.d_info*, %struct.d_info** %3, align 8
  %16 = getelementptr inbounds %struct.d_info, %struct.d_info* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.d_info_checkpoint*, %struct.d_info_checkpoint** %4, align 8
  %19 = getelementptr inbounds %struct.d_info_checkpoint, %struct.d_info_checkpoint* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  %20 = load %struct.d_info*, %struct.d_info** %3, align 8
  %21 = getelementptr inbounds %struct.d_info, %struct.d_info* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.d_info_checkpoint*, %struct.d_info_checkpoint** %4, align 8
  %24 = getelementptr inbounds %struct.d_info_checkpoint, %struct.d_info_checkpoint* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
